--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,9 @@ description: >- # this means to ignore newlines until "baseurl:"
 # github_username:  energysystemstudio
 
 # Build settings
-theme: minima
-plugins:
-  - jekyll-feed
+#theme: minima
+#plugins:
+ # - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
