--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 # github_username:  energysystemstudio
 
 # Build settings
-#theme: minima
+theme: minima
 plugins:
   - jekyll-feed
 
